# BussmaRAGandML-AI

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py:q  pyproject.toml
backend/Clustering/: association.py
backend/RAG/: get_embedding_function.py  populate_database.py  query_data.py
backend/Regression/: Regression.py
backend/chroma/: chroma.sqlite3
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/: apiConfig.ts
frontend/src/routes/: ChatBot.svelte  Graphs.svelte  Home.svelte
